[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Robot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sounds/Drill.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scripts/MainScene.gd" type="Script" id=3]
[ext_resource path="res://Scripts/UpgradeButton.gd" type="Script" id=4]
[ext_resource path="res://Scripts/TextPosition.gd" type="Script" id=5]
[ext_resource path="res://Fonts/UbuntuMono.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scripts/TextMoney.gd" type="Script" id=7]
[ext_resource path="res://Sounds/dark_fantasy_studio_dystopia_seamless.ogg" type="AudioStream" id=8]

[sub_resource type="Theme" id=1]

[node name="MainScene" type="Node2D"]
script = ExtResource( 3 )

[node name="Robot" parent="." instance=ExtResource( 1 )]

[node name="World" type="Node2D" parent="."]
z_index = -1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DepthLabel" type="Label" parent="CanvasLayer"]
margin_left = 4.0
margin_top = 4.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.870588, 0.933333, 0.839216, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.0784314, 0.0470588, 0.109804, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Depth"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_top = 4.0
margin_right = -4.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.870588, 0.933333, 0.839216, 1 )
custom_colors/font_color_shadow = Color( 0.0784314, 0.0470588, 0.109804, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Money"
align = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 4.0
grow_horizontal = 2
hint_tooltip = "Increases vision and mining speed.
Click or press U to upgrade."
mouse_default_cursor_shape = 2
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 6 )
text = "Buy upgrade"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrillSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 1.0
pitch_scale = 0.3

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0
autoplay = true
